# MusicVisualizer_Equalizer

./: CMakeLists.txt  README.md  main.cpp
